Refactor project naming in code and styles; update references from "ChatGPT Image Saver" to "ChatGPT Bulk Image Downloader"

--- a/content-script.css
+++ b/content-script.css
@@ -1,6 +1,6 @@
 /* ChatGPT Bulk Image Downloader - Content Script Styles */
 
-#chatgpt-image-saver-ui {
+#chatgpt-bulk-image-downloader-ui {
   position: fixed;
   top: 50%;
   right: 20px;
